--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
-.App {
-  text-align: center;
+@import url('http://fonts.cdnfonts.com/css/barlow');
+
+.sideline {
+    position: absolute;
+    width: 7.875rem;
+    height: 110%;
+    left: 0px;
+    top: 0px;
+    background: #bdcfe0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.logo {
+    position: absolute;
+    left: 30%;
+    right: 94.5%;
+    top: 4.76%;
+    bottom: 93.54%;
+    background: #000000;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.side-text {
+    position: absolute;
+    width: 38.75rem;
+    height: 1.375rem;
+    left: -14.125rem;
+    top: 26rem;
+    font-family: 'Barlow', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 22px;
+    text-align: center;
+    letter-spacing: 1.585em;
+    text-transform: uppercase;
+    color: #282828;
+    transform: rotate(90deg);
 }
