--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
 
 .logo {
     position: absolute;
-    left: 30%;
+    left: 34%;
     right: 94.5%;
     top: 4.58%;
     bottom: 93.54%;
@@ -31,7 +31,7 @@
     position: absolute;
     width: 36rem;
     height: 1.375rem;
-    left: -13.125rem;
+    left: -13rem;
     top: 23rem;
     font-family: 'Barlow', sans-serif;
     font-style: normal;
@@ -39,8 +39,31 @@
     font-size: 1.125rem;
     line-height: 22px;
     text-align: center;
-    letter-spacing: 1em;
+    letter-spacing: 1.2em;
     text-transform: uppercase;
     color: #282828;
     transform: rotate(90deg);
+}
+
+.navbar {
+    text-align: center;
+}
+
+.navbar ul {
+    display: inline-flex;
+    list-style: none;
+    overflow: hidden;
+}
+
+.navbar li {
+    padding: 2rem;
+    margin: 0 2rem;
+    font-family: 'Barlow';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 0.938rem;
+    line-height: 18px;
+    letter-spacing: 0.135em;
+    color: #FFFFFF;
+    cursor: pointer;
 }
