--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@
     font-style: normal;
     font-weight: 600;
     font-size: 1.125rem;
-    line-height: 22px;
+    line-height: 1.375rem;
     text-align: center;
     letter-spacing: 1.2em;
     text-transform: uppercase;
@@ -62,8 +62,59 @@
     font-style: normal;
     font-weight: 600;
     font-size: 0.938rem;
-    line-height: 18px;
+    line-height: 1.125rem;
     letter-spacing: 0.135em;
     color: #FFFFFF;
     cursor: pointer;
+}
+
+.text {
+    position: absolute;
+    /* width: 645.67px;
+    height: 110px; */
+    left: 10.313rem;
+    top: -5.313rem;
+}
+
+.head-text {
+    position: absolute;
+    width: 520.67px;
+    height: 110px;
+    left: 2.5rem;
+    top: 5.25rem;
+    font-family: 'Barlow';
+    font-style: italic;
+    font-weight: 900;
+    font-size: 4.381rem;
+    line-height: 12.813rem;
+    color: #FFFFFF;
+}
+
+.mid-text {
+    position: absolute;
+    width: 390px;
+    height: 50px;
+    left: 2rem;
+    top: 18.625rem;
+    font-family: 'Barlow';
+    font-style: italic;
+    font-weight: 300;
+    font-size: 2.5rem;
+    line-height: 3rem;
+    letter-spacing: 0.15em;
+    color: #FFFFFF;
+}
+
+.price {
+    position: absolute;
+    /* width: 391px;
+    height: 56px; */
+    left: 1.875rem;
+    top: 25.375rem;
+    font-family: 'Barlow';
+    font-style: italic;
+    font-weight: 500;
+    font-size: 2.813rem;
+    /* line-height: 54px; */
+    color: #FFFFFF;
 }
