--- a/src/App.css
+++ b/src/App.css
@@ -70,18 +70,16 @@
 
 .text {
     position: absolute;
-    /* width: 645.67px;
-    height: 110px; */
     left: 10.313rem;
     top: -5.313rem;
 }
 
 .head-text {
     position: absolute;
-    width: 520.67px;
-    height: 110px;
+    width: 32.542rem;
+    height: 6.875rem;
     left: 2.5rem;
-    top: 5.25rem;
+    top: 4.25rem;
     font-family: 'Barlow';
     font-style: italic;
     font-weight: 900;
@@ -92,10 +90,10 @@
 
 .mid-text {
     position: absolute;
-    width: 390px;
-    height: 50px;
+    width: 24.375rem;
+    height: 3.125rem;
     left: 2rem;
-    top: 18.625rem;
+    top: 17.625rem;
     font-family: 'Barlow';
     font-style: italic;
     font-weight: 300;
@@ -107,14 +105,41 @@
 
 .price {
     position: absolute;
-    /* width: 391px;
-    height: 56px; */
     left: 1.875rem;
-    top: 25.375rem;
+    top: 24rem;
     font-family: 'Barlow';
     font-style: italic;
     font-weight: 500;
     font-size: 2.813rem;
-    /* line-height: 54px; */
     color: #FFFFFF;
+}
+
+.para {
+    position: absolute;
+    width: 30.625rem;
+    left: 1.875rem;
+    top: 31.875rem;
+    font-family: 'Barlow';
+    font-style: italic;
+    font-weight: 500;
+    font-size: 0.875rem;
+    line-height: 2rem;
+    letter-spacing: 0.05em;
+    color: #C2D4E3;
+}
+
+.btn {
+    position: absolute;
+    width: 7.813rem;
+    height: 3.159rem;
+    left: 1.875rem;
+    top: 41.25rem;
+    background: #CBD6E0;
+    border-radius: 27.2727px;
+    font-family: 'Barlow';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 0.813rem;
+    line-height: 1.125rem;
+    color: #171717;
 }
