--- a/src/App.css
+++ b/src/App.css
@@ -179,3 +179,36 @@
     background: rgba(125, 125, 125, 0.15);
     backdrop-filter: blur(42px);
 }
+
+.ellipse-top {
+    position: absolute;
+    width: 90px;
+    height: 90px;
+    left: 688px;
+    top: 90px;
+    border-radius: 60px;
+    background: rgba(125, 125, 125, 0.15);
+    backdrop-filter: blur(15px);
+}
+
+.ellipse-bottom {
+    position: absolute;
+    width: 190px;
+    height: 190px;
+    left: 1000px;
+    top: 360px;
+    border-radius: 115px;
+    background: rgba(125, 125, 125, 0.11);
+    backdrop-filter: blur(15px);
+}
+
+.ellipse-right {
+    position: absolute;
+    width: 180px;
+    height: 180px;
+    left: 1210px;
+    top: 165px;
+    border-radius: 110px;
+    background: rgba(125, 125, 125, 0.2);
+    backdrop-filter: blur(15px);
+}
