--- a/src/App.css
+++ b/src/App.css
@@ -182,33 +182,33 @@
 
 .ellipse-top {
     position: absolute;
-    width: 90px;
-    height: 90px;
-    left: 688px;
-    top: 90px;
-    border-radius: 60px;
+    width: 5.625rem;
+    height: 5.625rem;
+    left: 43rem;
+    top: 5.625rem;
+    border-radius: 3.75rem;
     background: rgba(125, 125, 125, 0.15);
-    backdrop-filter: blur(15px);
+    backdrop-filter: blur(0.938rem);
 }
 
 .ellipse-bottom {
     position: absolute;
-    width: 190px;
-    height: 190px;
-    left: 1000px;
-    top: 360px;
-    border-radius: 115px;
+    width: 11.875rem;
+    height: 11.875rem;
+    left: 62.5rem;
+    top: 22.5rem;
+    border-radius: 7.188rem;
     background: rgba(125, 125, 125, 0.11);
-    backdrop-filter: blur(15px);
+    backdrop-filter: blur(0.938rem);
 }
 
 .ellipse-right {
     position: absolute;
-    width: 180px;
-    height: 180px;
-    left: 1210px;
-    top: 165px;
-    border-radius: 110px;
+    width: 11.25rem;
+    height: 11.25rem;
+    left: 75.625rem;
+    top: 10.313rem;
+    border-radius: 6.875rem;
     background: rgba(125, 125, 125, 0.2);
-    backdrop-filter: blur(15px);
+    backdrop-filter: blur(0.938rem);
 }
