--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
 .sideline {
     position: absolute;
     width: 7.875rem;
-    height: 100vh;
+    height: 100%;
     left: 0px;
     top: 0px;
     background: #bdcfe0;
@@ -31,13 +31,10 @@
     position: absolute;
     width: 36rem;
     height: 1.375rem;
-    left: -13rem;
-    top: 23rem;
     font-family: 'Barlow', sans-serif;
     font-style: normal;
     font-weight: 600;
-    font-size: 1.125rem;
-    line-height: 1.375rem;
+    font-size: 1rem;
     text-align: center;
     letter-spacing: 1.2em;
     text-transform: uppercase;
