--- a/src/Components/Navbar/NavbarStyles.css
+++ b/src/Components/Navbar/NavbarStyles.css
@@ -29,14 +29,14 @@
     padding: 1rem;
 } */
 
-/* .navbar .nav-menu {
+.navbar .nav-menu {
     height: 100%;
     align-items: center;
     display: flex;
     padding: 1rem;
-} */
+}
 
-/* .navbar li {
+.navbar li {
     padding: 1rem;
     font-weight: 600;
     color: #fff;
@@ -78,4 +78,4 @@
     .navbar button {
         font-size: 1.8rem;
     }
-} */
+}
