--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+@import url('http://fonts.cdnfonts.com/css/product-sans');
 
 :root {
   --primary-color: #0fB8e0;
@@ -17,9 +17,7 @@ span {
 
 body {
   margin: 0;
-  font-family: 'Roboto', 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Product Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -59,7 +57,6 @@ h2 {
 }
 
 button {
-  font-family: 'Roboto', sans-serif;
   padding: .7rem 1.5rem;
   margin: 1rem 0;
   background-color: var(--primary-color);
