--- a/src/Components/Hero/HeroStyles.css
+++ b/src/Components/Hero/HeroStyles.css
@@ -10,7 +10,7 @@
 }
 
 .hero .content {
-    height: 75vh;
+    height: 90vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -19,6 +19,7 @@
 }
 
 .hero h1 {
+    font-size: 4.2rem;
     color: #f8f8f8;
 }
 
@@ -29,5 +30,9 @@
 @media screen and (max-width:940px) {
     .hero .content {
         margin-left: 1rem;
+    }
+
+    .hero h1 {
+        font-size: 3.9rem;
     }
 }
