--- a/src/Components/Navbar/NavbarStyles.css
+++ b/src/Components/Navbar/NavbarStyles.css
@@ -46,6 +46,7 @@
 
 .navbar li {
     padding: 1rem;
+    font-size: 1.2rem;
     font-weight: 600;
     color: #fff;
 }
@@ -85,6 +86,10 @@
     .navbar li {
         margin-right: 1rem;
         font-size: 2rem;
+    }
+
+    .navbar .li {
+        cursor: pointer;
     }
 
     .navbar button {
