--- a/src/Components/Footer/FooterStyles.css
+++ b/src/Components/Footer/FooterStyles.css
@@ -5,6 +5,10 @@
     background: rgba(255, 255, 255, 0.7);
 }
 
+h2 {
+    cursor: pointer;
+}
+
 .footer:before {
     content: '';
     position: absolute;
@@ -98,6 +102,11 @@
     border-radius: 4px;
     color: #f8f8f8;
     font-size: 3rem;
+    cursor: pointer;
+}
+
+.footer .col-container .col .pointer {
+    cursor: pointer;
 }
 
 @media screen and (max-width: 940px) {
