--- a/src/Components/Hero/HeroStyles.css
+++ b/src/Components/Hero/HeroStyles.css
@@ -33,6 +33,34 @@
     }
 
     .hero h1 {
-        font-size: 3.7rem;
+        font-size: 4rem;
+    }
+}
+
+@media screen and (max-width:840px) {
+    .hero h1 {
+        font-size: 3.8rem;
+    }
+}
+
+@media screen and (max-width:760px) {
+    .hero h1 {
+        font-size: 3.6rem;
+    }
+}
+
+@media screen and (max-width:700px) {
+    .hero h1 {
+        font-size: 3.5rem;
+    }
+}
+
+@media screen and (max-width:640px) {
+    .content {
+        margin-top: 2rem;
+    }
+
+    .hero h1 {
+        font-size: 3.3rem;
     }
 }
