--- a/src/Components/Hero/HeroStyles.css
+++ b/src/Components/Hero/HeroStyles.css
@@ -64,3 +64,15 @@
         font-size: 3.3rem;
     }
 }
+
+@media screen and (max-width:510px) {
+    .hero h1 {
+        font-size: 3.125rem;
+    }
+}
+
+@media screen and (max-width:400px) {
+    .hero h1 {
+        font-size: 3rem;
+    }
+}
