--- a/src/Components/Contact/ContactStyles.css
+++ b/src/Components/Contact/ContactStyles.css
@@ -78,3 +78,30 @@ textarea:focus {
         margin: 0.8rem 0;
     }
 }
+
+@media screen and (max-width: 750px) {
+    .contact .form .form-head {
+        padding-top: 3.6rem;
+        font-size: 3.1rem;
+    }
+}
+
+@media screen and (max-width: 630px) {
+    .contact .form .form-head {
+        padding-top: 3.2rem;
+        font-size: 3rem;
+    }
+}
+
+@media screen and (max-width: 510px) {
+    .contact .form .form-head {
+        padding-top: 3rem;
+        font-size: 2.8rem;
+    }
+}
+
+@media screen and (max-width: 510px) {
+    .contact .form .form-head {
+        padding-top: 1.5rem;
+    }
+}
