--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,7 @@ h2 {
 }
 
 button {
-  padding: .7rem 1.5rem;
+  padding: 0.7rem 1.5rem;
   margin: 1rem 0;
   background-color: var(--primary-color);
   border: 1px solid var(--primary-color);
@@ -81,5 +81,22 @@ button:hover {
 
   h2 {
     font-size: 2.5rem;
+  }
+
+  button {
+    padding: 0.7rem 1.2rem; 
+  }
+}
+
+@media screen and (max-width: 640px) {
+  button {
+    padding: 0.6rem 1rem;
+    font-size: 0.9rem;
+  }
+}
+
+@media screen and (max-width: 430px) {
+  button {
+    padding: 0.5rem 0.8rem;
   }
 }
