--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('http://fonts.cdnfonts.com/css/product-sans');
+@import url('https://fonts.googleapis.com/css2?family=Oxygen&display=swap');
 
 :root {
   --primary-color: #0fB8e0;
@@ -17,7 +17,7 @@ span {
 
 body {
   margin: 0;
-  font-family: 'Product Sans', sans-serif;
+  font-family: 'Oxygen', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
